# chat-client

./: .gitignore  .gitmodules  CMakeLists.txt  conanbuildinfo.txt  conanfile.txt
include/core/definitions/: header_length.h  message_types.h
include/core/messages/: instructions_handler.h  protobuf_instruction_handler.h
include/core/networking/: asio_socket.h  cpr_http_handler.h  http_handler.h  libuv_socket.h  socket.h
protos/: CMakeLists.txt  authentication.proto  identification.proto  protocols.proto  responses.proto
src/: CMakeLists.txt  asio_main.cc  main.cc
src/core/messages/: protobuf_instruction_handler.cc
src/core/networking/: asio_socket.cc  cpr_http_handler.cc  libuv_socket.cc
tests/: CMakeLists.txt  test_main.cc
tests/accounts/: test_authorization_presenter.cc  test_registration_presenter.cc
